syntax = "proto3";

package pluginapi.v1;

import "pluginapi/v1/data.proto";

message CtyType {
    oneof data {
        CtyPrimitiveType     primitive      = 1;
        CtyObjectType        object         = 2;
        CtyType              map            = 3;
        CtyType              list           = 4;
        CtyType              set            = 5;
        CtyTupleType         tuple          = 6;
        CtyDynamicPseudoType dynamic_pseudo = 7;
        CtyCapsuleType       encapsulated   = 8;
    }
}

message CtyObjectType {
    map<string, CtyType> attrs = 1;
}

message CtyTupleType {
    repeated CtyType elements = 1;
}

message CtyDynamicPseudoType {}

enum CtyCapsuleType {
    CAPSULE_UNSPECIFIED  = 0;
    CAPSULE_PLUGIN_DATA  = 1;
    CAPSULE_DELAYED_EVAL = 2;
}

enum CtyPrimitiveType {
    KIND_UNSPECIFIED = 0;
    KIND_STRING      = 1;
    KIND_NUMBER      = 2;
    KIND_BOOL        = 3;
}

message CtyValue {
    CtyType type = 1;
    oneof   data {
        CtyPrimitiveValue primitive  = 2;
        CtyMapLike        mapLike    = 8;
        CtyListLike       listLike   = 9;
        Data              pluginData = 10;
    }
}

message CtyPrimitiveValue {
    oneof data {
        string str = 1;
        double num = 2;
        bool   bln = 3;
    }
}

message CtyListLike {
    repeated CtyValue elements = 1;
}

message CtyMapLike {
    map<string, CtyValue> elements = 1;
}
